# seacells

./: .gitignore  .gitmodules  LICENSE  README.md
code/: CMakeLists.txt
code/src/: mainconsole.cpp  mainevo.cpp  mainviewer.cpp
code/src/core/: capture.hpp  config.cpp  config.hpp  evaluators.hpp  plantcell.hpp  plantcontroller.hpp  scenario.hpp  typesconfig.hpp
code/src/viewer/: drawextensions.hpp  grnview.qml  grnviewer.hpp  viewerextensions.hpp
